css/style.css
/* ... */
@media screen and (max-width: 640px)
{
  h1,
  #contact h2
  {
    font-size: 2em;
  }
  header .header-inner nav .hor-nav.menu-nav
  {
      display: none;
  }
  header .header-container .header-inner .mob-nav-btn
  {
      cursor: pointer;
      display: block;
      height: 53px;
      position: absolute;
      right: 20px;
      top: 20px;
      width: 51px;
  }
  header .header-container
  {
      overflow: inherit;
      position: relative;
      width: 100%;
  }
  header .header-container .header-inner nav .hor-nav {
      background-color: #fff;
      float: left;
      margin: 0;
      padding: 0;
      width: 100%;
      position: absolute;
      top: 88px;
  }
  header .header-container .header-inner nav .hor-nav li
  {
      display: block;
      width: 100%;
      margin: 0;
  }
  header .header-container .header-inner nav .hor-nav li a
  {
      color: #000;
      font-weight: 500;
      text-decoration: none;
         padding: 7px 0 7px 10px;
      display: block;
  }
  header .header-container .header-inner nav .hor-nav li a:hover
  {
      border-bottom: none;
      background-color:#e51b24;
      color:  #fff;
  }
  header .header-container .header-inner nav .hor-nav li a.active
  {
      border-bottom: none;
      background-color:#e51b24;
      color:  #fff;
  }
  header .header-container .header-inner nav .hor-nav li.contact
  {
      padding-right: 0;
  }
  header .header-inner
  {
      padding: 0;
  }
  header .header-container .header-inner a.logo
  {
      margin: 20px 0 0 10px;
  }
  .link-btn,
  #contact .contact-container a.box-link-btn
  {
    padding: 8px 20px;
    text-decoration: none;
    text-transform: uppercase;
    width: auto;
  }
  header .header-container .header-inner nav .hor-nav li.contact
  {
      background:none;
  }
  #banner {
      height: 650px;
      width: 100%;
  }
  .page-banner .box-info {
    width: auto;
  }
  .page-banner .box-info h1
  {
    font-size: 2.5em;
  }
  .about #banner
  {
      height: 350px;
  }
  .about .page-banner .box-info
  {
    width: 100%;
  }
  .about .page-banner .box-info h1
  {
    font-size: 2.2em;
  }
  .about .page-banner .box-info,
  .btn-go-bottom
  {
    top: 0;
  }
  .about #main
  {
    top: -2px;
  }
  #main #page-content .content-inner
  {
      margin: 50px 0 0;
  }
  .internal-page #main #intro-project
  {
      padding-bottom: 50px;
  }
  .internal-page #main #intro-project .col
  {
      width: 100%;
      display: inherit;
  }
  .internal-page #main #intro-project .col.last
  {
      padding-left: 0;
  }
  .internal-page #main #detail-project .project-focus .box
  {
     width: 100%;
  }
  .internal-page #main #detail-project .project-focus
  {
    border-bottom: 2px solid #ccc;
    margin-bottom: 50px;
  }
  .internal-page #main #detail-project .project-focus h2
  {
    margin: 0;
    padding: 20px 0 0;
  }
  .internal-page #main #detail-project .project-focus .box {
      display: block;
      vertical-align: top;
  }
  .internal-page #main #detail-project .project-focus .box-right
  {
      padding-left: 0;
      text-align: center;
  }
  .internal-page #main #detail-project .project-focus .box-left
  {
      padding-right: 0;
      text-align: center;
  }
  .internal-page #main #intro-project h1
  {
      margin: 20px 0 0;
  }
  .internal-page #main #form-container .left-info
  {
      box-sizing:normal;
      float: none;
      padding-right: 0;
      text-transform: uppercase;
      width:100%;
  }
  .internal-page #main #form-container .right-info
  {
      box-sizing:normal;
      float: none;
  }
  .internal-page #main #form-container .right-info input.text-field
  {
      width: 100%;
  }
  .internal-page #main .team-container ul li .pic-member .info-member
  {
    height: 45px;
  }
  .internal-page #main .team-container ul li .pic-member .info-member span
  {
      padding: 10px 15px 0;
  }
  .internal-page #main .team-container ul li
  {
    width: 32.5%;
  }
  .internal-page #main .team-container ul li .pic-member .info-member span
  {
      font-size: 0.7em;
  }
  .internal-page #main #page-content .grid-container .col .items .item-back h2
  {
      font-size: 1.4em;
      margin: 10% 0 0;
  }
  .page-banner .box-info p
  {
      display: none;
  }
  #footer-inner h2
  {
      margin: 20px 0 10px;
  }
  footer #footer-inner .grid-container .grid-1-of-2
  {
      margin-right: 0;
      width: auto;
  }
  footer #footer-inner .grid-container .col
  {
      float: none;
      width: 100%
  }
}

@media screen and (max-width: 480px)
{
  .internal-page #main .team-container ul li
  {
    width: 48.5%;
  }
  .about .page-banner .box-info
  {
      width: 90%;
  }
  .about .page-banner .box-info h1
  {
      font-size: 1.8em;
  }
}

